# dprint-plugin-typescript

./: .gitattributes  .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  _claude.sh  build.rs  dprint  dprint.json  fix_disambiguation.sh  fix_disambiguation_whitespace.sh  fix_trailing_newlines.sh  rust-toolchain.toml  setup-wasm.sh
.github/ISSUE_TEMPLATE/: bug_report.md  deno-fmt-bug-report.md
.github/workflows/: ci.generated.yml  ci.ts  ci.yml  publish.generated.yml  publish.ts  publish.yml  release.generated.yml  release.ts  release.yml
benches/: formatting.rs
deployment/: schema.json
deployment/npm/: .npmignore  README.md  index.d.ts  index.js  index.test.js  package-lock.json  package.json  setup.js
development/: README.md  dprint
docs/superpowers/plans/: 2026-05-21-import-groups.md
docs/superpowers/specs/: 2026-05-21-import-groups-design.md
patches/: cargo.patch  sourcemap_detector.patch
scripts/: generateReleaseNotes.ts
src/: error.rs  format_text.rs  formatter.rs  lib.rs  parse.rs  swc.rs  wasm_plugin.rs
src/configuration/: builder.rs  resolve_config.rs  types.rs
src/generation/: comments.rs  context.rs  generate.rs  generate_types.rs  helpers.rs  mod.rs  node_helpers.rs  oxc_helpers.rs  parser.rs  to_node.rs  tokens.rs
src/generation/imports/: classify.rs  merge.rs  mod.rs  partition.rs  resolved.rs
src/generation/sorting/: mod.rs  module_specifiers.rs  sorter.rs  tailwind_class_names.rs
src/generation/swc/: extensions.rs  flatten_assign_expr.rs  flatten_binary_expr.rs  flatten_curried_arrows.rs  flatten_member_like_expr.rs  helpers.rs  mod.rs
src/parsing/: comments.rs  context.rs  helpers.rs  mod.rs  node_helpers.rs  parser.rs  parser_types.rs  sorting.rs  tokens.rs
src/parsing/sorting/: mod.rs  module_specifiers.rs
src/parsing/swc/: extensions.rs  flatten_binary_expr.rs  flatten_member_like_expr.rs
src/swc/: parse_swc_ast.rs
src/utils/: builtins.rs  char_iterator.rs  file_text_has_ignore_comment.rs  is_prefix_semi_colon_insertion_char.rs  mod.rs  stack.rs  string_utils.rs  vec_map.rs
tests/: readme.md  spec_test.rs  test.rs
tests/performance/: checker.txt
tests/specs/comments/: ComentInTemplateLiteral_All.txt  CommentBlocks_All.txt  CommentLines_All.txt  IgnoreComments_All.txt  IgnoreComments_Jsx.txt  JSDocComments_All.txt
tests/specs/common/: CjsFile_All.txt  DeclarationFile_All.txt  JsxInTs_All.txt  MjsFile_All.txt
tests/specs/deno/: Deno_ConditionalExpressionStatementBody.txt  Deno_ImportsExportsPreferSingleLineTrue.txt  Deno_SortImportsAndExports_Maintain.txt  Deno_SortNamedImportExportSpecifiers.txt
tests/specs/externalFormatter/: css.txt  css_many_quasis.txt  html.txt  sql.txt
tests/specs/external_formatter/: css.txt  css_multiple_quasis.txt  graphql.txt  html.txt  sql.txt
tests/specs/file/: File_All.txt  File_IgnoreFileComment.txt
tests/specs/fileTypes/: ParseJsAsJsx.txt  ParseJsxFiles.txt
tests/specs/file_indent_level/: FileIndentLevel.txt
tests/specs/general/: Arguments_All.txt  Arguments_PreferHanging_True.txt  Arguments_PreferSingleLine_PreferHanging_True.txt  Arguments_SpaceAround_True.txt  Arguments_TrailingCommas_Always.txt  Arguments_TrailingCommas_MultiLineAndHanging.txt  Jsx_TrailingCommas.txt  Jsx_TrailingCommas_Never.txt  Padding_Line_Between_Statements_False.txt  Padding_Line_Between_Statements_True.txt  Parameters_All.txt  Parameters_PreferHanging_True.txt  Parameters_SpaceAround_True.txt  ParenthesesRemoval_Comprehensive.txt  Parentheses_All.txt  SpaceSurroundingProperties_False.txt  UseParentheses_Disambiguation.txt  UseParentheses_Maintain.txt  UseParentheses_PreferNone.txt
tests/specs/indentation/: HangingIndentTimes_2.txt
tests/specs/issues/: issue0011.txt  issue0015.txt  issue0021.txt  issue0022.txt  issue0023.txt  issue0024.txt  issue0025.txt  issue0030.txt  issue0046.txt  issue0047.txt  issue0052.txt  issue0059.txt  issue0065.txt  issue0085.txt  issue0094.txt  issue0095.txt  issue0103.txt  issue0112.txt  (+61 more)
(+396 files in other folders)
