[package]
name = "dprint-plugin-typescript"
version = "0.89.3"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/dprint/dprint-plugin-typescript"
keywords = ["formatting", "formatter", "typescript", "javascript"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-typescript"
description = "TypeScript and JavaScript code formatter."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[dependencies]
anyhow = "1.0.64"
deno_ast = { version = "0.35.0", features = ["view"] }
dprint-core = { version = "0.66.1", features = ["formatting"] }
dprint-core-macros = "0.1.0"
percent-encoding = "2.3.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
debug-here = "0.2"
dprint-development = "0.9.5"
pretty_assertions = "1.3.0"
serde_json = { version = "1.0" }
