[package]
name = "dprint-plugin-typescript"
version = "0.95.11+sf.2"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2021"
homepage = "https://github.com/secforge/dprint-plugin-typescript"
keywords = ["formatting", "formatter", "typescript", "javascript"]
license = "MIT"
repository = "https://github.com/secforge/dprint-plugin-typescript"
description = "TypeScript and JavaScript code formatter."

[package.metadata]
dprint_update_url = "https://github.com/secforge/dprint-plugin-typescript/releases/latest/download/latest.json"
dprint_schema_url_template = "https://github.com/secforge/dprint-plugin-typescript/releases/download/{VERSION}/schema.json"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]
tracing = ["dprint-core/tracing"]

[[test]]
name = "specs"
path = "tests/spec_test.rs"
harness = false

[build-dependencies]
toml = "0.9"

[dependencies]
anyhow = "1.0.64"
capacity_builder = "0.5.0"
deno_ast = { version = "0.50.0", features = ["view"] }
dprint-core = { version = "0.67.4", features = ["formatting"] }
dprint-core-macros = "0.1.0"
percent-encoding = "2.3.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
dprint-development = "0.10.1"
dprint-plugin-sql = "0.2.0"
malva = "0.11.2"
markup_fmt = "0.19.0"
pretty_assertions = "1.3.0"
serde_json = { version = "1.0" }
